Change image type from png to webp

--- a/bar.html
+++ b/bar.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +7,14 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Pup Power</title>
-    <meta name="description" content="Dog Leisure centre in Dublin, including dog gym, dog pool, dog playground and dog bar">
+    <meta name="description"
+        content="Dog Leisure centre in Dublin, including dog gym, dog pool, dog playground and dog bar">
 </head>
-
 <body id="bar">
     <header>
         <nav class="nav">
-            <ul id="menu"><li id="logo">PUP POWER <i class="fa-solid fa-paw"></i></li>
+            <ul id="menu">
+                <li id="logo">PUP POWER <i class="fa-solid fa-paw"></i></li>
                 <li class="home"><a href="index.html">HOME</a></li>
                 <li class="pool"><a href="pool.html">POOL</a></li>
                 <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
@@ -38,40 +38,40 @@
         </div>
     </header>
     <h2 class="intro-text-box">What can we get you?</h2>
-        <div class="food-menu">
-            <ul id="food">
-                <li> <strong>MAIN</strong></li>
-                <li>Beef Bones</li>
-                <li>Meat sticks</li>
-                <li>Pork Sausages</li>
-                <li>Chicken breast</li>
-                <li>Salmon fillets</li>
-                <li>Beef Sticks</li>
-                <li><br></li>
-                <li><strong>SIDE</strong></li>
-                <li>Carrots</li>
-                <li>Sweet Potato</li>
-                <li>Rice</li>
-                <li>Broccoli</li>
-                <li><br></li>
-                <li> <strong>DRINKS</strong></li>
-                <li>Fresh Water</li>
-                <li>Vegetable Juice</li>
-                <li>Puppachino</li>
-            </ul>
-        </div>
-        <div class="dog-left">
-            <p> <strong>All You Can Chew</strong>served everyday from 12:00 - 19:00!
-                Our fresh ingredients are locally sourced and 100% MSG Free.
-                Fast, Authentic,Hearty & Healthy.
-            </p>
-        </div>
-        <div class="dog-right">
-            <p> We are fast food, but not as you know it. Don't forget your <strong>free</strong> Puppachino while you're here! <a href="index.html">Check
-                    conditions</a>
-            </p>
-        </div>
-
+    <div class="food-menu">
+        <ul id="food">
+            <li> <strong>MAIN</strong></li>
+            <li>Beef Bones</li>
+            <li>Meat sticks</li>
+            <li>Pork Sausages</li>
+            <li>Chicken breast</li>
+            <li>Salmon fillets</li>
+            <li>Beef Sticks</li>
+            <li><br></li>
+            <li><strong>SIDE</strong></li>
+            <li>Carrots</li>
+            <li>Sweet Potato</li>
+            <li>Rice</li>
+            <li>Broccoli</li>
+            <li><br></li>
+            <li> <strong>DRINKS</strong></li>
+            <li>Fresh Water</li>
+            <li>Vegetable Juice</li>
+            <li>Puppachino</li>
+        </ul>
+    </div>
+    <div class="dog-left">
+        <p> <strong>All You Can Chew</strong>served everyday from 12:00 - 19:00!
+            Our fresh ingredients are locally sourced and 100% MSG Free.
+            Fast, Authentic,Hearty & Healthy.
+        </p>
+    </div>
+    <div class="dog-right">
+        <p> We are fast food, but not as you know it. Don't forget your <strong>free</strong> Puppachino while you're
+            here! <a href="index.html">Check
+                conditions</a>
+        </p>
+    </div>
     <footer>
         <ul class="footer">
             <li>CONTACT US!</li>
@@ -81,8 +81,8 @@
             <li class="rights">© 2022 PUP POWER | All Rights Reserved</li>
         </ul>
     </footer>
-    <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous" async></script>
-    <script src="code.js" async></script>
+    <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous" async defer></script>
+  <script src="code.js" async defer></script>
 </body>
 
 </html>
