--- a/form.html
+++ b/form.html
@@ -47,7 +47,6 @@
       </a>
     </div>
   </header>
-
   <body id="form">
     <main id="main-form">
       <form action="#" method="post">
@@ -117,8 +116,8 @@
           <li class="rights">© 2022 PUP POWER | All Rights Reserved</li>
       </ul>
   </footer>
-  <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous" async></script>
-  <script src="code.js" async></script>
+  <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous" async defer></script>
+  <script src="code.js" async defer></script>
   </body>
 
 </html>
