--- a/playground.html
+++ b/playground.html
@@ -113,8 +113,7 @@
       <li class="rights">© 2022 PUP POWER | All Rights Reserved</li>
     </ul>
   </footer>
-  <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous" async></script>
-  <script src="code.js" async></script>
+  <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous" async defer></script>
+  <script src="code.js" async defer></script>
 </body>
-
 </html>
