Delete javascript from header

--- a/playground.html
+++ b/playground.html
@@ -37,6 +37,7 @@
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
+      </div>
   </header>
   <h2 class="intro-text-box1">A play a day keeps the vet away!</h2>
   <div class="container-play">
