--- a/pool.html
+++ b/pool.html
@@ -120,7 +120,7 @@
     <div class="container-s">
       <img src="assets/images/corinne-img.jpg"
         alt="Waist up portrait of a black haired woman smiling to the camera with crossed arms" class="corinne">
-      <span id="name">CORINNE</span>
+      <span class="name">CORINNE</span>
     </div>
     <p class="staff-c">Corinne is a certified swimming coach, active member of the International Swimming Foundation and
       the Swimming Institute at St.James Hospital.She describes herself as a motivational and easy going coach with the
@@ -129,7 +129,7 @@
     <div class="container-s">
       <img src="assets/images/katherine-img.jpg"
         alt="Waist up portrait of a brown haired woman smiling to the camera with crossed arms" class="katherine">
-      <span id="name">KATHERINE</span>
+      <span class="name">KATHERINE</span>
     </div>
     <p class="staff-k">
       Katherine is a graduate of The Veterinary Medicine College, Dublin University August 2015. She uses her knowledge
@@ -138,7 +138,7 @@
     <div class="container-s">
       <img src="assets/images/david-img.jpg" alt="Waist up portrait of a man smiling to the camera with crossed arms"
         class="david">
-      <span id="name">DAVID</span>
+      <span class="name">DAVID</span>
     </div>
     <p class="staff-d">
       David is from Cork, Ireland. After earning an B.A. in Science, he worked at the Ocean World Exposition in Kerry
