--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </header>
   <h2 class="intro-text-box">Dublin's first Dog only Sports & Leisure centre</h2>
   <div class="container-1">
-    <p><span id="pool-title"><a href="pool.html">POOL</a></span>
+    <p><span class="title"><a href="pool.html">POOL</a></span>
       Check out our pool area! Our exclusive 10m swimming pools are fitted for every breed.
       Our pools are equiped with 16kW Hewalex heat pumps to ensure pleasant temperatures all year round, cleaned
       thoroughly throughout the day with a brand new filtering system to ensure your dogs
@@ -48,7 +48,7 @@
       our swimming pools are PETA approved.</p>
   </div>
   <div class="container-2">
-    <p><span id="playground-title"><a href="playground.html">PLAYGROUND</a></span>
+    <p><span class="title"><a href="playground.html">PLAYGROUND</a></span>
       Visit our playground!Formerly known as St. Anne's park, newly renovated,fully
       equiped dog playground.Ranging from professional training equipment to chewy toys. We have it
       all! The playground is spread acros 100 acres to accommodate all your needs. Our playground
@@ -56,14 +56,14 @@
       your pup!</p>
   </div>
   <div class="container-3">
-    <p><span id="gym-title"><a href="gym.html">GYM</a></span>
+    <p><span class="title"><a href="gym.html">GYM</a></span>
       Try out our gym! Ireland's first dog only gym! Need help preparing for a
       competition or just staying in shape, we got you covered! With more than 250 machines available,
       all ground floor for accessibility, free lockers and staff on site ready to help! The gym is
       thoroughly cleaned and sanitezed after every visit.</p>
   </div>
   <div class="container-4">
-    <p><span id="bar-title"><a href="bar.html">BAR</a></span>
+    <p><span class="title"><a href="bar.html">BAR</a></span>
       Relax in our bar! A perfect place to end the day (Or start😉)! Enjoy our wide
       range of food and drinks. Schedule an appointment for your pup in any of our three facilities and
       enjoy a drink on us! Bring your pup with you and get a complimentary puppaccino with your
