Stretch gym text box, change class gym-box1

--- a/gym.html
+++ b/gym.html
@@ -44,7 +44,7 @@
   </div>
   <div class="gym-box">PupPower <i class="fa-solid fa-paw"></i>Fitness Gym and Quality training in a high-energy and
     supportive atmosphere.</div>
-  <div class="gym-box1">Click <a href="form.html">here</a> and register now!</div>
+  <div class="gym-box">Click <a href="form.html">here</a> and register now!</div>
   <div class="gym-grid">
     <p class="text-gym1">Exercising keeps your dog healthy and limber while reducing behavioural problems such as
       excessive licking, barking, chewing, digging, and other anxiety-related behaviours. It also helps your dog build
