Change form size, rename pitbull image

--- a/pool.html
+++ b/pool.html
@@ -107,7 +107,7 @@
   </div>
   <div id="swim">
     <h3 class="march-title">START SWIMMING</h3>
-    <p class="pool-paragraph">Join us and get exclusive offers every week.<br>Click <strong>"Join Now"</strong> button
+    <p class="pool-paragraph">Join us and get exclusive offers every week.<br>Click the purple <strong>"Join Now"</strong> button
       bellow and start your membership now!</p>
   </div>
   <div class="container-boxer">
@@ -148,7 +148,7 @@
   </div>
   <div class="g-pinscher" id="g-p">
     <div id="inner-pool"><img src="assets/images/inner-pool.jpg" alt="Inner pool with chairs">
-      <p>P.S. Our inner pools are open!</p>
+      <p>P.S. Our indoor pools are open!</p>
     </div>
   </div>
   <footer>
