--- a/gym.html
+++ b/gym.html
@@ -36,6 +36,7 @@
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
+    </div>
   </header>
   <h2 class="intro-text-box1">Get your pup pumpin!</h2>
   <span class="weight"><img src="assets/images/weight-icon.png" alt="Black and white icon of a free weight"></span>
