Add terms and conditions box to form

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li class="bar"><a href="bar.html">BAR</a></li>
       </ul>
     </nav>
-    <!-- Top Navigation Hamburger Menu -->
+    <!-- Top Navigation Hamburger Menu Copied from W3Schools-->
     <div class="topnav">
       <a href="index.html" class="active" id="logo-mobile">PUP POWER <i class="fa-solid fa-paw"></i></a>
       <div id="myLinks">
