--- a/pool.html
+++ b/pool.html
@@ -25,7 +25,7 @@
         <li class="bar"><a href="bar.html">BAR</a></li>
       </ul>
     </nav>
-    <!-- Top Navigation Hamburger Menu -->
+     <!-- Top Navigation Hamburger Menu Copied from W3Schools-->
     <div class="topnav" id="topnav">
       <a href="index.html" class="active" id="logo-mobile">PUP POWER<i class="fa-solid fa-paw"></i></a>
       <div id="myLinks">
