Add tag on active pages

--- a/bar.html
+++ b/bar.html
@@ -19,7 +19,7 @@
                 <li class="pool"><a href="pool.html">POOL</a></li>
                 <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
                 <li class="gym"><a href="gym.html">GYM</a></li>
-                <li class="bar"><a href="bar.html">BAR</a></li>
+                <li class="bar"><a href="bar.html" class="active">BAR</a></li>
             </ul>
         </nav>
       <!-- Top Navigation Hamburger Menu Copied from W3Schools-->
