--- a/form.html
+++ b/form.html
@@ -37,7 +37,7 @@
     </div>
   </header>
     <main id="main-form">
-      <form action="#" method="post">
+      <form action="thanks.html" method="get">
         <fieldset class="join-form">
           <legend id="form-title">Register to join us!</legend>
           <div class="fieldinput">
