--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="nav">
       <ul id="menu">
         <li id="logo">PUP POWER <i class="fa-solid fa-paw"></i></li>
-        <li class="home"><a href="index.html">HOME</a></li>
+        <li class="home"><a href="index.html" class="active">HOME</a></li>
         <li class="pool"><a href="pool.html">POOL</a></li>
         <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
         <li class="gym"><a href="gym.html">GYM</a></li>
