--- a/gym.html
+++ b/gym.html
@@ -19,7 +19,7 @@
         <li class="home"><a href="index.html">HOME</a></li>
         <li class="pool"><a href="pool.html">POOL</a></li>
         <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
-        <li class="gym"><a href="gym.html">GYM</a></li>
+        <li class="gym"><a href="gym.html" class="active">GYM</a></li>
         <li class="bar"><a href="bar.html">BAR</a></li>
       </ul>
     </nav>
