--- a/playground.html
+++ b/playground.html
@@ -19,7 +19,7 @@
         <li id="logo">PUP POWER <i class="fa-solid fa-paw"></i></li>
         <li class="home"><a href="index.html">HOME</a></li>
         <li class="pool"><a href="pool.html">POOL</a></li>
-        <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
+        <li class="playground"><a href="playground.html" class="active">PLAYGROUND</a></li>
         <li class="gym"><a href="gym.html">GYM</a></li>
         <li class="bar"><a href="bar.html">BAR</a></li>
       </ul>
