--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
     <p class="text"><span class="title"><a href="pool.html">POOL</a></span>
       Check out our pool area! Our exclusive 10m swimming pools are fitted for every breed.
       Our pools are equiped with 16kW Hewalex heat pumps to ensure pleasant temperatures all year round, cleaned
-      thoroughly throughout the day with a brand new filtering system to ensure your dogs
-      health is a top priority. We offer free swimming lessons to pups under 12 months. All
+      thoroughly throughout the day with a brand new filtering system. We offer free swimming lessons to pups under 12 months. All
       our swimming pools are PETA approved.</p>
   </div>
   <div class="container-2">
