Final commit - edit readme

--- a/form.html
+++ b/form.html
@@ -8,12 +8,15 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Pup Power</title>
-  <meta name="description" content="Dog Leisure centre in Dublin, including dog gym, dog pool, dog playground and dog bar">
+  <meta name="description"
+    content="Dog Leisure centre in Dublin, including dog gym, dog pool, dog playground and dog bar">
 </head>
+
 <body class="background">
   <header>
     <nav class="nav">
-      <ul id="menu"><li id="logo">PUP POWER <i class="fa-solid fa-paw"></i></li>
+      <ul id="menu">
+        <li id="logo">PUP POWER <i class="fa-solid fa-paw"></i></li>
         <li class="home"><a href="index.html">HOME</a></li>
         <li class="pool"><a href="pool.html">POOL</a></li>
         <li class="playground"><a href="playground.html">PLAYGROUND</a></li>
@@ -21,7 +24,7 @@
         <li class="bar"><a href="bar.html">BAR</a></li>
       </ul>
     </nav>
-     <!-- Top Navigation Hamburger Menu Copied from W3Schools-->
+    <!-- Top Navigation Hamburger Menu Copied from W3Schools-->
     <div class="topnav">
       <a href="index.html" class="active" id="logo-mobile">PUP POWER <i class="fa-solid fa-paw"></i></a>
       <div id="myLinks">
@@ -36,103 +39,126 @@
       </a>
     </div>
   </header>
-    <main id="main-form">
-      <form action="thanks.html" method="get">
-        <fieldset class="join-form">
-          <legend id="form-title">Register to join us!</legend>
-          <div class="fieldinput">
-            <label for="fname">First Name</label>
-            <input type="text" id="fname" name="first_name" placeholder=" Please enter your full name" required>
-          </div>
-          <div class="fieldinput">
-            <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="last_name" placeholder=" Please enter your last name" required>
-          </div>
-          <div class="fieldinput">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder=" Please enter your email" required>
-          </div>
-          <div class="fieldinput">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" placeholder=" Please enter your password" required>
-          </div>
-          <div class="fieldinput">
-            <label for="dog-breed">Select Dog Breed:</label>
-            <select name="dog-breed" id="dog-breed">
-              <option value="select">Select</option>
-              <option value="american-staffordshire-terrier">American Staffordshire Terrier</option>
-              <option value="pitbull">Pitbull</option>
-              <option value="golden-retriever">Golden Retriever</option>
-              <option value="chihuahua">Chihuahua</option>
-              <option value="jack-russel">Jack Russel</option>
-              <option value="samoyed">Samoyed</option>
-              <option value="other">Other</option>
-            </select>
-          </div>
-          <div class="fieldinput">
-            <label for="gender">Select Gender:</label>
-            <select name="gender" id="gender">
-              <option value="select">Select</option>
-              <option value="male">Male</option>
-              <option value="female">Female</option>
-            </select>
-          </div>
-          <div class="fieldinput">
-            <label for="phone-number">Phone Number</label>
-            <input type="text" id="phone-number" name="phone-number" placeholder=" Please enter your phone number"
-              required>
-          </div>
-          <div class="fieldinput">
-            <input type="checkbox" id="checkbox" name="checkbox" required>
-            <label for="checkbox">I agree to terms and conditions
-            </label>
-          </div>
-          <div class="fieldinput">
-            <button class="btn" type="submit">Join Now</button>
-            <input type="reset" value="Reset Form" class="btn">
-          </div>
-        </fieldset>
-      </form>
-      <fieldset>
-        <legend id="form-title">Terms and Conditions</legend>
-      <div class="terms">Terms and Conditions 
-        Please read these terms and conditions carefully before using website operated by PupPower.
-        <strong><br>Conditions of use <br></strong>
-        By using this website, you certify that you have read and reviewed this Agreement and that you agree to comply with its terms. If you do not want to be bound by the terms of this Agreement, you are advised to leave the website accordingly. [name] only grants use and access of this website, its products, and its services to those who have accepted its terms.
-        <strong><br>Privacy policye<br></strong>
-        Before you continue using our website, we advise you to read our privacy policy regarding our user data collection. It will help you better understand our practices.
-        <strong><br>Age restriction<br></strong>
-        You must be at least 18 (eighteen) years of age before you can use this website. By using this website, you warrant that you are at least 18 years of age and you may legally adhere to this Agreement. Pup Power assumes no responsibility for liabilities related to age misrepresentation.
-        <strong><br>Intellectual property<br></strong>
-        You agree that all materials, products, and services provided on this website are the property of Pup Power, its affiliates, directors, officers, employees, agents, suppliers, or licensors including all copyrights, trade secrets, trademarks, patents, and other intellectual property. You also agree that you will not reproduce or redistribute the Pup Power’s intellectual property in any way, including electronic, digital, or new trademark registrations.
-        You grant Pup Power a royalty-free and non-exclusive license to display, use, copy, transmit, and broadcast the content you upload and publish. For issues regarding intellectual property claims, you should contact the company in order to come to an agreement.
-        <strong><br>User accounts<br></strong>
-        As a user of this website, you may be asked to register with us and provide private information. You are responsible for ensuring the accuracy of this information, and you are responsible for maintaining the safety and security of your identifying information. You are also responsible for all activities that occur under your account or password.
-        If you think there are any possible issues regarding the security of your account on the website, inform us immediately so we may address them accordingly.
-        We reserve all rights to terminate accounts, edit or remove content and cancel orders at our sole discretion.
-        <strong><br>Applicable law<br></strong>
-        By visiting this website, you agree that the laws of the [location], without regard to principles of conflict laws, will govern these terms and conditions, or any dispute of any sort that might come between Pup Power and you, or its business partners and associates.
-        <strong><br>Disputes<br></strong>
-        Any dispute related in any way to your visit to this website or to products you purchase from us shall be arbitrated by state or federal court [location] and you consent to exclusive jurisdiction and venue of such courts.
-        <strong><br>Indemnification<br></strong>
-        You agree to indemnify Pup Power and its affiliates and hold Pup Power harmless against legal claims and demands that may arise from your use or misuse of our services. We reserve the right to select our own legal counsel. 
-        Limitation on liability
-        Pup Power is not liable for any damages that may occur to you as a result of your misuse of our website.
-        Pup Power reserves the right to edit, modify, and change this Agreement at any time. We shall let our users know of these changes through electronic mail. This Agreement is an understanding between Pup Power and the user, and this supersedes and replaces all prior agreements regarding the use of this website.
+  <main id="main-form">
+    <form action="thanks.html" method="get">
+      <fieldset class="join-form">
+        <legend class="form-title">Register to join us!</legend>
+        <div class="fieldinput">
+          <label for="fname">First Name</label>
+          <input type="text" id="fname" name="first_name" placeholder=" Please enter your full name" required>
+        </div>
+        <div class="fieldinput">
+          <label for="lname">Last Name</label>
+          <input type="text" id="lname" name="last_name" placeholder=" Please enter your last name" required>
+        </div>
+        <div class="fieldinput">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" placeholder=" Please enter your email" required>
+        </div>
+        <div class="fieldinput">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" placeholder=" Please enter your password" required>
+        </div>
+        <div class="fieldinput">
+          <label for="dog-breed">Select Dog Breed:</label>
+          <select name="dog-breed" id="dog-breed">
+            <option value="select">Select</option>
+            <option value="american-staffordshire-terrier">American Staffordshire Terrier</option>
+            <option value="pitbull">Pitbull</option>
+            <option value="golden-retriever">Golden Retriever</option>
+            <option value="chihuahua">Chihuahua</option>
+            <option value="jack-russel">Jack Russel</option>
+            <option value="samoyed">Samoyed</option>
+            <option value="other">Other</option>
+          </select>
+        </div>
+        <div class="fieldinput">
+          <label for="gender">Select Gender:</label>
+          <select name="gender" id="gender">
+            <option value="select">Select</option>
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+          </select>
+        </div>
+        <div class="fieldinput">
+          <label for="phone-number">Phone Number</label>
+          <input type="text" id="phone-number" name="phone-number" placeholder=" Please enter your phone number"
+            required>
+        </div>
+        <div class="fieldinput">
+          <input type="checkbox" id="checkbox" name="checkbox" required>
+          <label for="checkbox">I agree to terms and conditions
+          </label>
+        </div>
+        <div class="fieldinput">
+          <button class="btn" type="submit">Join Now</button>
+          <input type="reset" value="Reset Form" class="btn">
         </div>
       </fieldset>
-    </main>
-    <footer>
-      <ul class="footer">
-          <li>CONTACT US!</li>
-          <li>Email: customer-service@puppower.com</li>
-          <li>Tel: +353 83 1234 567</li>
-          <li>Address: 175 Herbert Street, Dublin 1, Ireland</li>
-          <li class="rights">© 2022 PUP POWER | All Rights Reserved</li>
-      </ul>
+    </form>
+    <fieldset>
+      <legend class="form-title">Terms and Conditions</legend>
+      <div class="terms">Terms and Conditions
+        Please read these terms and conditions carefully before using website operated by PupPower.
+        <strong><br>Conditions of use <br></strong>
+        By using this website, you certify that you have read and reviewed this Agreement and that you agree to comply
+        with its terms. If you do not want to be bound by the terms of this Agreement, you are advised to leave the
+        website accordingly. [name] only grants use and access of this website, its products, and its services to those
+        who have accepted its terms.
+        <strong><br>Privacy policye<br></strong>
+        Before you continue using our website, we advise you to read our privacy policy regarding our user data
+        collection. It will help you better understand our practices.
+        <strong><br>Age restriction<br></strong>
+        You must be at least 18 (eighteen) years of age before you can use this website. By using this website, you
+        warrant that you are at least 18 years of age and you may legally adhere to this Agreement. Pup Power assumes no
+        responsibility for liabilities related to age misrepresentation.
+        <strong><br>Intellectual property<br></strong>
+        You agree that all materials, products, and services provided on this website are the property of Pup Power, its
+        affiliates, directors, officers, employees, agents, suppliers, or licensors including all copyrights, trade
+        secrets, trademarks, patents, and other intellectual property. You also agree that you will not reproduce or
+        redistribute the Pup Power’s intellectual property in any way, including electronic, digital, or new trademark
+        registrations.
+        You grant Pup Power a royalty-free and non-exclusive license to display, use, copy, transmit, and broadcast the
+        content you upload and publish. For issues regarding intellectual property claims, you should contact the
+        company in order to come to an agreement.
+        <strong><br>User accounts<br></strong>
+        As a user of this website, you may be asked to register with us and provide private information. You are
+        responsible for ensuring the accuracy of this information, and you are responsible for maintaining the safety
+        and security of your identifying information. You are also responsible for all activities that occur under your
+        account or password.
+        If you think there are any possible issues regarding the security of your account on the website, inform us
+        immediately so we may address them accordingly.
+        We reserve all rights to terminate accounts, edit or remove content and cancel orders at our sole discretion.
+        <strong><br>Applicable law<br></strong>
+        By visiting this website, you agree that the laws of the [location], without regard to principles of conflict
+        laws, will govern these terms and conditions, or any dispute of any sort that might come between Pup Power and
+        you, or its business partners and associates.
+        <strong><br>Disputes<br></strong>
+        Any dispute related in any way to your visit to this website or to products you purchase from us shall be
+        arbitrated by state or federal court [location] and you consent to exclusive jurisdiction and venue of such
+        courts.
+        <strong><br>Indemnification<br></strong>
+        You agree to indemnify Pup Power and its affiliates and hold Pup Power harmless against legal claims and demands
+        that may arise from your use or misuse of our services. We reserve the right to select our own legal counsel.
+        Limitation on liability
+        Pup Power is not liable for any damages that may occur to you as a result of your misuse of our website.
+        Pup Power reserves the right to edit, modify, and change this Agreement at any time. We shall let our users know
+        of these changes through electronic mail. This Agreement is an understanding between Pup Power and the user, and
+        this supersedes and replaces all prior agreements regarding the use of this website.
+      </div>
+    </fieldset>
+  </main>
+  <footer>
+    <ul class="footer">
+      <li>CONTACT US!</li>
+      <li>Email: customer-service@puppower.com</li>
+      <li>Tel: +353 83 1234 567</li>
+      <li>Address: 175 Herbert Street, Dublin 1, Ireland</li>
+      <li class="rights">© 2022 PUP POWER | All Rights Reserved</li>
+    </ul>
   </footer>
   <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous" async defer></script>
   <script src="code.js" async defer></script>
-  </body>
+</body>
 
 </html>
