--- a/pool.html
+++ b/pool.html
@@ -25,7 +25,7 @@
         <li class="bar"><a href="bar.html">BAR</a></li>
       </ul>
     </nav>
-     <!-- Top Navigation Hamburger Menu Copied from W3Schools-->
+    <!-- Top Navigation Hamburger Menu Copied from W3Schools-->
     <div class="topnav" id="topnav">
       <a href="index.html" class="active" id="logo-mobile">PUP POWER<i class="fa-solid fa-paw"></i></a>
       <div id="myLinks">
@@ -107,7 +107,8 @@
   </div>
   <div id="swim">
     <h3 class="march-title">START SWIMMING</h3>
-    <p class="pool-paragraph">Join us and get exclusive offers every week.<br>Click the purple <strong>"Join Now"</strong> button
+    <p class="pool-paragraph">Join us and get exclusive offers every week.<br>Click the purple <strong>"Join
+        Now"</strong> button
       bellow and start your membership now!</p>
   </div>
   <div class="container-boxer">
@@ -163,4 +164,5 @@
   <script src="https://kit.fontawesome.com/968597752e.js" crossorigin="anonymous" async defer></script>
   <script src="code.js" async defer></script>
 </body>
+
 </html>
